# PyFlow

./: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
bindings/: bindings.cpp
examples/cpp/: main.cpp
examples/python/: text.py
include/pyflow/: Callback.h  CompositeState.h  Event.h  EventManager.h  Events.h  State.h  StateMachine.h
src/: Callback.cpp  CompositeState.cpp  Event.cpp  EventManager.cpp  Events.cpp  State.cpp  StateMachine.cpp
tests/python/: test_pyflow.py
